[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=2]
[ext_resource path="res://Roboto-Light.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://btn_click.wav" type="AudioStream" id=13]
[ext_resource path="res://Roboto-Black.ttf" type="DynamicFontData" id=14]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 14 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Question" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 139.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Is Your Number Here:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="numbers" type="Label" parent="."]
margin_left = 10.0
margin_top = 25.0
margin_right = 134.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 2 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer" type="Label" parent="."]
margin_top = 20.0
margin_right = 144.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = -1.7962
margin_top = 128.415
margin_right = 143.204
margin_bottom = 182.415
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 53.0
margin_right = 92.0
margin_bottom = 54.0

[node name="btn_yes" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 39.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.905882, 0.298039, 0.235294, 1 )
text = "Yes"
flat = true

[node name="btn_no" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 39.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.905882, 0.298039, 0.235294, 1 )
text = "No"
flat = true

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_left = -2.96255
margin_top = 35.1075
margin_right = 142.037
margin_bottom = 118.108
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_left = 27.0
margin_right = 116.0
margin_bottom = 83.0

[node name="btn_again" type="Button" parent="CenterContainer2/VBoxContainer"]
margin_right = 89.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.905882, 0.298039, 0.235294, 1 )
text = "Play Again"
flat = true

[node name="btn_home" type="Button" parent="CenterContainer2/VBoxContainer"]
margin_top = 29.0
margin_right = 89.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.905882, 0.298039, 0.235294, 1 )
text = "Home"
flat = true

[node name="btn_credits" type="Button" parent="CenterContainer2/VBoxContainer"]
margin_top = 58.0
margin_right = 89.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.905882, 0.298039, 0.235294, 1 )
text = "Credits"
flat = true

[node name="Admob" type="Node" parent="."]
script = ExtResource( 2 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-8571450547245888/7863695610"
[connection signal="pressed" from="CenterContainer/VBoxContainer/btn_yes" to="." method="_on_btn_yes_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/btn_no" to="." method="_on_btn_no_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/btn_again" to="." method="_on_btn_play_again_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/btn_home" to="." method="_on_btn_home_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/btn_credits" to="." method="_on_btn_credits_pressed"]
